// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle onSubmit 1`] = `
<div
  className="content-container"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="Checklist Name"
      type="text"
      value="car"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Items, seperating each with a comma. Eg Item 1, Item 2, Item 3"
      type="text"
      value="rucksack 1, rucksack 2"
    />
    <button
      className="button"
    >
      Add
       Checklist
    </button>
  </form>
</div>
`;

exports[`should handle onSubmit manual 1`] = `
<div
  className="content-container"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="Checklist Name"
      type="text"
      value="car"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Items, seperating each with a comma. Eg Item 1, Item 2, Item 3"
      type="text"
      value="rucksack 1, rucksack 2"
    />
    <button
      className="button"
    >
      Add
       Checklist
    </button>
  </form>
</div>
`;

exports[`should render ChecklistForm correctly 1`] = `
<div
  className="content-container"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="Checklist Name"
      type="text"
      value=""
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Items, seperating each with a comma. Eg Item 1, Item 2, Item 3"
      type="text"
      value=""
    />
    <button
      className="button"
    >
      Add
       Checklist
    </button>
  </form>
</div>
`;

exports[`should set items if textarea changes 1`] = `
<div
  className="content-container"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="Checklist Name"
      type="text"
      value=""
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Items, seperating each with a comma. Eg Item 1, Item 2, Item 3"
      type="text"
      value="first item, second item"
    />
    <button
      className="button"
    >
      Add
       Checklist
    </button>
  </form>
</div>
`;

exports[`should set name if input changes 1`] = `
<div
  className="content-container"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="Checklist Name"
      type="text"
      value="new name"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add Items, seperating each with a comma. Eg Item 1, Item 2, Item 3"
      type="text"
      value=""
    />
    <button
      className="button"
    >
      Add
       Checklist
    </button>
  </form>
</div>
`;
